--- a/index.html
+++ b/index.html
@@ -4,21 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>teste front-end</title>
 </head>
 <body>
     <header>
-        <section>
+        <section class="top-header">
+            <div class="center">
+                <div class="w-50 left d-flex telefones">
+                    <span class="left"><img src="assets/img/phone.png" alt="phone.png"><p class="fs-11">(51) 9 9920 0350</p></span>
+                    <span class="left"><img src="assets/img/whats.png" alt="whats.png"><p class="fs-11">(51) 9 9920 0350</p></span>
+                </div><!-- w-50 -->
+                <div class="w-50 right">
+                    <ul class="right menu-top-header">
+                        <li><a href="" class="fs-11">LISTA DE DESEJOS</a></li>
+                        <li><a href="" class="fs-11">FALE CONOSCO</a></li>
+                        <li><a href="" class="fs-11">TROCAS E DEVOLUÇÕES</a></li>
+                    </ul>
+                    <div class="clear"></div>
+                </div><!-- w-50 -->
+                <div class="clear"></div>
+            </div><!-- center -->
+        </section><!-- top-header -->
+
+        <section class="main-header">
+            <a href=""><img src="assets/img/logo.png"></a>
             <div>
-                <img src="" alt=""><p>(51) 9 9920 0350</p>
-                <img src="" alt=""><p>(51) 9 9920 0350</p>
+                <input type="search" id="search">
+                <button type="submit" id="btn-search">
+                    <img src="assets/img/search.png" alt="search icon">
+                </button>
             </div>
             <div>
-                <ul>
-                    <li><a href="">LISTA DE DESEJOS</a></li>
-                    <li><a href="">FALE CONOSCO</a></li>
-                    <li><a href="">TROCA E DEVOLUÇÕES</a></li>
-                </ul>
+                <p>Entrar</p>
+                <img src="assets/img/chevron-down.png">
+            </div>
+            <div>
+                <img src="assets/img/Path 1.png">
             </div>
         </section>
     </header>
