Criação do header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 </div><!-- w-50 -->
                 <div class="w-50 right">
                     <ul class="right menu-top-header">
-                        <li><a href="" class="fs-11">LISTA DE DESEJOS</a></li>
-                        <li><a href="" class="fs-11">FALE CONOSCO</a></li>
-                        <li><a href="" class="fs-11">TROCAS E DEVOLUÇÕES</a></li>
+                        <li><a href="#lista-de-desejos" class="fs-11">LISTA DE DESEJOS</a></li>
+                        <li><a href="#fale-conosco" class="fs-11">FALE CONOSCO</a></li>
+                        <li><a href="#trocas-e-devolucoes" class="fs-11">TROCAS E DEVOLUÇÕES</a></li>
                     </ul>
                     <div class="clear"></div>
                 </div><!-- w-50 -->
@@ -27,21 +27,27 @@
             </div><!-- center -->
         </section><!-- top-header -->
 
-        <section class="main-header">
-            <a href=""><img src="assets/img/logo.png"></a>
-            <div>
-                <input type="search" id="search">
-                <button type="submit" id="btn-search">
+        <section class="center main-header ">
+            <div class="w-20 left">
+                <a href="" class="logo left"><img src="assets/img/logo.png"></a><!-- Logo -->
+            </div>
+
+            <div class="w-50 left search-container">
+                <input type="search" id="search" placeholder="O que você está procurando?">
+                <button type="submit" id="btn-search" >
                     <img src="assets/img/search.png" alt="search icon">
                 </button>
+            </div><!-- search-containar-->
+            <div class="clear"></div>
+
+            <div class="w-10 left"></div>
+            <div class="w-10 left dropdown">
+                <span class="right"><p class="bold entrar">Entrar</p>
+                <img src="assets/img/chevron-down.png"></span>
             </div>
-            <div>
-                <p>Entrar</p>
-                <img src="assets/img/chevron-down.png">
-            </div>
-            <div>
-                <img src="assets/img/Path 1.png">
-            </div>
+            <div class="w-10 ">
+                <img  class="right" src="assets/img/Path 1.png">
+            <div class="clear"></div>
         </section>
     </header>
 </body>
